Fix extra padding in about

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ a {
 	flex-direction: column;
 	align-items: center;	
 	background-color: rgba(0,0,0,0.4);
-	padding: 1.5rem 2.25rem;
+	padding: 3rem 2.25rem;
 	border-radius: 14px
 }
 
@@ -78,8 +78,7 @@ a {
 }
 
 .about {
-  max-width: 35rem;  
-	padding: 1.5rem 2.25rem;
+  max-width: 35rem;	
 }
 
 .name {
